# SnakeAI

./: CMakeLists.txt  LICENSE  imgui.ini
src/: main.cpp  pch.h  snake_ai.cpp  snake_ai.h  util.h
src/gui/: gui.cpp  gui.h  style.h
src/snake/: apple.cpp  apple.h  cell.cpp  cell.h  field.cpp  field.h  game_settings.h  snake.cpp  snake.h  snake_game.cpp  snake_game.h
src/window/: window.cpp  window.h
